<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.9</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>
    <groupId>io.extact</groupId>
    <artifactId>msa-spring-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>msa-spring-parent</name>
    <description>Parent POM of Rental Management System By MSA</description>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/extact-io/msa-spring-parent</url>
        </repository>
        <snapshotRepository>
            <id>github</id>
            <name>GitHub Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/extact-io/msa-spring-parent</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/extact-io/msa-spring-parent</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <properties>
        <!-- environment settings -->
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- library versions -->
        <version.lib.jose4j>0.9.6</version.lib.jose4j>
        <version.lib.auth0jwt>4.5.0</version.lib.auth0jwt>
        <version.lib.assertj>3.27.3</version.lib.assertj>
        <version.lib.archunit>1.4.1</version.lib.archunit>
        <version.lib.awaitility>4.3.0</version.lib.awaitility>
        <version.lib.commons-lang>3.17.0</version.lib.commons-lang>
        <version.lib.commons-csv>1.13.0</version.lib.commons-csv>
        <version.lib.logback-access>2.0.6</version.lib.logback-access>
        <version.lib.otel.logback-appender>2.15.0-alpha</version.lib.otel.logback-appender>
        <version.lib.ds-observation>1.1.2</version.lib.ds-observation>
        <version.lib.text-io>3.4.1</version.lib.text-io>

        <!-- maven plugin versions -->
        <version.plugin.jacoco>0.8.13</version.plugin.jacoco>
        <version.plugin.exec-maven>3.5.0</version.plugin.exec-maven>
        <version.plugin.docker>0.46.0</version.plugin.docker>

        <!-- exec-maven settings -->
        <image.version.tag>${project.artifactId}:${project.version}</image.version.tag>
        <image.version-timestamp.tag>
            ${project.artifactId}:${project.version}-${git.build.time}</image.version-timestamp.tag>
        <docker.cmd.opt1>--filter=reference='${image.version.tag}'</docker.cmd.opt1>
        <docker.cmd.opt2>--format '{{.ID}}'</docker.cmd.opt2>

        <!-- sonarcloud settings -->
        <sonar.projectKey>extact-io_rms</sonar.projectKey>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <sonar.organization>extact-io</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.test.exclusions>**/*Test.java</sonar.test.exclusions>
        <sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
        <sonar.coverage.exclusions>**/io/extact/rms/client/console/**/*</sonar.coverage.exclusions>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.basedir}/../rms-coverage/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>

        <lombok.version>1.18.42</lombok.version>
        <!-- workaround for https://github.com/TNG/ArchUnit/issues/1442 -->
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.extact</groupId>
                <artifactId>msa-spring-test-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.extact</groupId>
                <artifactId>msa-spring-platform-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.extact</groupId>
                <artifactId>msa-spring-platform-fw</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.extact</groupId>
                <artifactId>msa-spring-platform-fw-test-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.extact</groupId>
                <artifactId>msa-spring-rms-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.extact</groupId>
                <artifactId>msa-spring-rms-ui-console-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.extact</groupId>
                <artifactId>msa-spring-rms-ui-console-test</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${version.lib.commons-lang}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${version.lib.commons-csv}</version>
            </dependency>
            <dependency>
                <groupId>org.beryx</groupId>
                <artifactId>text-io</artifactId>
                <version>${version.lib.text-io}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback.access</groupId>
                <artifactId>logback-access-tomcat</artifactId>
                <version>${version.lib.logback-access}</version>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-logback-appender-1.0</artifactId>
                <version>${version.lib.otel.logback-appender}</version>
            </dependency>
            <dependency>
                <groupId>net.ttddyy.observation</groupId>
                <artifactId>datasource-micrometer-spring-boot</artifactId>
                <version>${version.lib.ds-observation}</version>
            </dependency>
            <dependency>
                <groupId>org.bitbucket.b_c</groupId>
                <artifactId>jose4j</artifactId>
                <version>${version.lib.jose4j}</version>
            </dependency>
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${version.lib.auth0jwt}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${version.lib.assertj}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${version.lib.archunit}</version>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>${version.lib.awaitility}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${version.plugin.jacoco}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!--
                    workaround add settig for Java24 by mvn install:install-file
                    https://github.com/projectlombok/lombok/issues/3772
                -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>-proc:full</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.github.git-commit-id</groupId>
                    <artifactId>git-commit-id-maven-plugin</artifactId>
                    <configuration>
                        <abbrevLength>7</abbrevLength>
                        <dateFormat>yyyyMMddHHmmss</dateFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${version.plugin.exec-maven}</version>
                    <executions>
                        <execution>
                            <id>remove-old-image</id>
                            <phase>post-integration-test</phase>
                            <goals>
                                <goal>exec</goal>
                            </goals>
                            <configuration>
                                <!-- イメージIDを逆引きして該当バージョン紐づくタグもすべて削除する -->
                                <executable>sh</executable>
                                <arguments>
                                    <argument>-c</argument>
                                    <argument>
                                        docker rmi -f $(docker images \
                                        ${docker.cmd.opt1} \
                                        ${docker.cmd.opt2}) \
                                        || true
                                    </argument>
                                </arguments>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>build-info</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <!--
                            ubar-jarではなく通常のjarをリポジトリに登録されるようにする
                            attachはuber-jarを通常のjarと一緒にmavenに登録するかの設定
                        -->
                        <attach>false</attach>
                        <classifier>uber</classifier>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                        <image>
                            <name>${project.artifactId}</name>
                            <tags>
                                <tag>${image.version.tag}</tag>
                                <tag>${image.version-timestamp.tag}</tag>
                            </tags>
                            <!-- for google buildpack
                            <builder>gcr.io/buildpacks/builder:latest</builder>
                            -->
                            <builder>
                                paketobuildpacks/builder-jammy-buildpackless-base</builder>
                            <buildpacks>
                                <buildpack>paketobuildpacks/java</buildpack>
                            </buildpacks>
                            <createdDate>now</createdDate>
                            <env>
                                <BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
                                <BP_JVM_CDS_ENABLED>true</BP_JVM_CDS_ENABLED>
                                <!-- jlinkでビルドするとCGLIBとの相性で起動しなくなる場合があるのでOFF -->
                                <BP_JVM_JLINK_ENABLED>false</BP_JVM_JLINK_ENABLED>
                            </env>
                        </image>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!--
           buildpackはキャッシュが効かず毎回イメージをフルビルドするため非常に遅いため
           ローカル環境でdocker buildでイメージをビルドしたい場合に利用するプロファイル
        -->
        <profile>
            <id>docker-build</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>build-image</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <!-- イメージIDを逆引きして該当バージョン紐づくタグもすべて削除する -->
                                    <executable>sh</executable>
                                    <arguments>
                                        <argument>-c</argument>
                                        <argument>
                                            docker build . \
                                            -t ${project.artifactId} \
                                            -t ${image.version.tag} \
                                            -t ${image.version-timestamp.tag}
                                        </argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>buildpacks-build</id>
            <properties>
                <mvn.profile.ci>on</mvn.profile.ci>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <goals>
                                    <goal>build-image-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>